--- a/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
@@ -174,33 +174,44 @@
 	          id: "batExeId",
 	          name: "Execution ID",
 	          field: "batExeId",
+	          width: 80,
 	          sortable: true,
 	          editor: Slick.Editors.Text,
 	          validator: createValidator,
+	          headerCssClass: "slick-header-columns",
+	          cssClass: "slick-column-center",
 	        },
 	        {
 	          id: "batProgId",
 	          name: "Program ID",
 	          field: "batProgId",
+	          width: 80,
 	          sortable: true,
 	          editor: Slick.Editors.Text,
 	          validator: createValidator,
+	          headerCssClass: "slick-header-columns",
+	          cssClass: "slick-column-center",
 	        },
 	        {
 	          id: "batProgNm",
 	          name: "Program Name",
 	          field: "batProgNm",
+	          width: 400,
 	          sortable: true,
 	          editor: Slick.Editors.Text,
 	          validator: createValidator,
+	          headerCssClass: "slick-header-columns",
 	        },
 	        {
 	          id: "batExeRstCd",
 	          name: "Result",
 	          field: "batExeRstCd",
+	          width: 80,
 	          sortable: true,
 	          editor: Slick.Editors.Text,
 	          validator: createValidator,
+	          headerCssClass: "slick-header-columns",
+	          cssClass: "slick-column-center",
 	        },
 	        {
 	          id: "batExeErrCd",
@@ -209,36 +220,50 @@
 	          sortable: true,
 	          editor: Slick.Editors.Text,
 	          validator: createValidator,
+	          headerCssClass: "slick-header-columns",
+	          cssClass: "slick-column-center",
 	        },
 	        {
 	          id: "stdYymm",
 	          name: "Standard Year/Month",
 	          field: "stdYymm",
+	          width: 130,
 	          sortable: true,
 	          editor: Slick.Editors.Text,
 	          validator: createValidator,
+	          headerCssClass: "slick-header-columns",
+	          cssClass: "slick-column-center",
 	        },
 	        {
 	          id: "mainEmpNo",
 	          name: "Main User",
 	          field: "mainEmpNo",
+	          width: 80,
 	          sortable: true,
 	          editor: Slick.Editors.Text,
 	          validator: createValidator,
+	          headerCssClass: "slick-header-columns",
+	          cssClass: "slick-column-center",
 	        },
 	        {
 	          id: "regUsrid",
 	          name: "Executor",
 	          field: "regUsrid",
+	          width: 80,
 	          sortable: true,
 	          editor: Slick.Editors.Text,
+	          headerCssClass: "slick-header-columns",
+	          cssClass: "slick-column-center",
 	        },
 	        {
 	          id: "regDt",
 	          name: "Execution Date",
 	          field: "regDt",
+	          width: 120,
 	          sortable: true,
 	          editor: Slick.Editors.Text,
+	          headerCssClass: "slick-header-columns",
+	          cssClass: "slick-column-center",
 	        },
 	      ];
 	
