--- a/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
+++ b/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
@@ -61,17 +61,6 @@
                     >
                       Download
                     </button>
-                    <button
-                      form="new-form"
-                      type="button"
-                      class="btn btn-secondary"
-                      style="padding: 4px 10px; color: white; font-size: 13px"
-                      onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-                      data-test="edit-button"
-                      onsubmit="return false;"
-                    >
-                      Edit
-                    </button>
                   </div>
                 </div>
               </form>
@@ -169,15 +158,15 @@
         var xcpt_cols = [unqId, "regUsrid", "regDt"];
         var check_cols = [unqId, "atitCd"];
         var columns = [
-            {id: "atitCd",   name: "account title", field: "atitCd", sortable: true, editor: Slick.Editors.Text, validator: createValidator},
-            {id: "atitNm", name: "account title name", field: "atitNm", sortable: true, editor: Slick.Editors.Text, validator: createValidator},
-            {id: "insuPlItmCd",   name: "insurance code", field: "insuPlItmCd", sortable: true, editor: Slick.Editors.Text, validator: createValidator},
-            {id: "insuPlItmNm",   name: "insurance name", field: "insuPlItmNm", sortable: true, editor: Slick.Editors.Text, validator: createValidator},
-            {id: "acntAmt", name: "amt", field: "acntAmt", sortable: true, editor: Slick.Editors.Text, validator: createValidator},
-            {id: "insuPlItmAmt", name: "recon amt", field: "insuPlItmAmt", sortable: true, editor: Slick.Editors.Text, validator: createValidator},
-            {id: "diffAmt",   name: "diff", field: "diffAmt", sortable: true, editor: Slick.Editors.Text, validator: createValidator},
-            {id: "regUsrid", name: "registrant", field: "regUsrid", sortable: true, editor: Slick.Editors.Text},
-            {id: "regDt", name: "registration date", field: "regDt", sortable: true, editor: Slick.Editors.Text}
+            {id: "atitCd",   name: "Account Title", field: "atitCd", width: 80, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
+            {id: "atitNm", name: "Account Title Name", field: "atitNm", width: 100, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns"},
+            {id: "insuPlItmCd",   name: "Insurance Code", field: "insuPlItmCd", width: 80, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
+            {id: "insuPlItmNm",   name: "Insurance Name", field: "insuPlItmNm", width: 100, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns"},
+            {id: "acntAmt", name: "Amt", field: "acntAmt", sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, headerCssClass: "slick-header-columns", cssClass: "slick-column-right"},
+            {id: "insuPlItmAmt", name: "Recon Amt", field: "insuPlItmAmt", sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, headerCssClass: "slick-header-columns", cssClass: "slick-column-right"},
+            {id: "diffAmt",   name: "Diff", field: "diffAmt", sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, headerCssClass: "slick-header-columns", cssClass: "slick-column-right"},
+            {id: "regUsrid", name: "Registrant", field: "regUsrid", width: 100, sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
+            {id: "regDt", name: "Registration Date", field: "regDt", width: 120, sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"}
         ];
         
         var options = {
